components/fia-auth/base/fia-auth-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fia-auth-service
  namespace: fia
spec:
  selector:
    app: fia-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
