components/fia-auth/base/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth
  namespace: fia
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: https-main
  hostnames:
    - "localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - group: ''
      kind: Service
      name: fia-auth-service
      port: 80
      weight: 1
